--- a/report/report.tex
+++ b/report/report.tex
@@ -10,6 +10,9 @@
 \usepackage{parskip}
 \usepackage{xcolor}
 \usepackage{hyperref}
+\usepackage{url}
+\usepackage{amsmath}
+
 
 % --- Colors & Links ---
 \definecolor{facultyblue}{HTML}{0055A4} % adjust if you prefer a different blue
@@ -40,7 +43,6 @@
 
 % --- Front page ---
 \input{pages/titlepage}
-\input{pages/abstract}
 
 
 % --- (Optional) structure for the rest of the report ---
@@ -51,5 +53,11 @@
 
 % Example content include (remove if you don't want placeholders)
 \input{content/introduction}
+\input{content/task2.tex}
+\input{content/task3.tex}
+
+\bibliographystyle{IEEEtran}  
+\bibliography{references}
+
 
 \end{document}
